force-app/main/default/objects/Payment__c/Payment__c.object-meta.xml
<CustomObject>
    <label>Paiement</label>
    <pluralLabel>Paiements</pluralLabel>
    <description>Un paiement attendu ou reçu pour une commande. Le partage suit le compte (maître-détail). Voir D-03.</description>
    <nameField>
        <label>N° paiement</label>
        <type>AutoNumber</type>
        <displayFormat>PAY-{00000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>