force-app/main/default/objects/Payment__c/fields/Days_To_Payment__c.field-meta.xml
<CustomField>
    <fullName>Days_To_Payment__c</fullName>
    <label>Délai de paiement (jours)</label>
    <description>Jours entre la date de la commande et l'encaissement. Alimente le délai moyen de paiement du tableau de bord.</description>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <formula>IF(
    OR(ISBLANK(Paid_Date__c), ISBLANK(Order__r.EffectiveDate)),
    NULL,
    Paid_Date__c - Order__r.EffectiveDate
)</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
</CustomField>