force-app/main/default/objects/Payment__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <label>Échéance</label>
    <type>Date</type>
</CustomField>