force-app/main/default/objects/Payment__c/fields/Failure_Reason__c.field-meta.xml
<CustomField>
    <fullName>Failure_Reason__c</fullName>
    <label>Motif d'échec</label>
    <type>Text</type>
    <length>255</length>
</CustomField>