force-app/main/default/objects/Payment__c/fields/Method__c.field-meta.xml
<CustomField>
    <fullName>Method__c</fullName>
    <label>Moyen de paiement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Card</fullName><default>false</default><label>Carte</label></value>
            <value><fullName>SEPA_Debit</fullName><default>false</default><label>Prélèvement SEPA</label></value>
            <value><fullName>Bank_Transfer</fullName><default>false</default><label>Virement</label></value>
            <value><fullName>LCR</fullName><default>false</default><label>LCR</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>