force-app/main/default/objects/Payment__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Commande</label>
    <type>Lookup</type>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Paiements</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>