force-app/main/default/objects/Payment__c/fields/Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>Paid_Date__c</fullName>
    <label>Encaissé le</label>
    <type>Date</type>
</CustomField>