force-app/main/default/objects/Payment__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Statut</label>
    <description>Valeurs API alignées sur les statuts Stripe ; libellés en français. Voir D-09.</description>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Pending</fullName><default>true</default><label>En attente</label></value>
            <value><fullName>Succeeded</fullName><default>false</default><label>Reçu</label></value>
            <value><fullName>Failed</fullName><default>false</default><label>Échoué</label></value>
            <value><fullName>Refunded</fullName><default>false</default><label>Remboursé</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>