force-app/main/default/objects/Payment__c/fields/Stripe_Payment_Intent_ID__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Payment_Intent_ID__c</fullName>
    <label>ID PaymentIntent Stripe</label>
    <description>Identifiant du PaymentIntent Stripe (pi_...). Lien entre Salesforce et Stripe.</description>
    <type>Text</type>
    <length>255</length>
    <unique>true</unique>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
</CustomField>