force-app/main/default/objects/Payment__c/validationRules/Paid_Date_Required_When_Succeeded.validationRule-meta.xml
<ValidationRule>
    <fullName>Paid_Date_Required_When_Succeeded</fullName>
    <active>true</active>
    <description>Un paiement reçu doit avoir une date d'encaissement.</description>
    <errorConditionFormula>AND(
        ISPICKVAL(Status__c, 'Succeeded'),
        ISBLANK(Paid_Date__c)
    )</errorConditionFormula>
    <errorDisplayField>Paid_Date__c</errorDisplayField>
    <errorMessage>Indiquez la date d'encaissement d'un paiement reçu.</errorMessage>
</ValidationRule>